# OpenStudioLandscapes

./: .coveragerc  .gitattributes  .gitignore  .gitignore.bak  .openstudiolandscapesrc  .pre-commit-config.yaml  EXAMPLE.env  README.md  README.rst  README_.md  README_DOCKER.md  README_UBUNTU_2204.md  _README.md  daemon.json  generate_readme.sh  noxfile.py  pyproject.toml  setup.cfg  setup.py  setup.sh  setup.yaml
.dagster-postgres/: dagster.yaml  docker-compose.postgres.yaml  docker-compose.yml
.github/workflows/: docker-image.yml
.landscapes/.pi-hole/: docker-compose.yml
.nox/: nox-report.json
.obsidian_config/: daily-notes.json  hotkeys.json  templates.json
.obsidian_config/plugins/obsidian-excalidraw-plugin/: data.json
.obsidian_config/plugins/templater-obsidian/: data.json
.obsolete/10.3/: docker-compose.yaml
.sbom/: cyclonedx-py.sbom-3.11.json  cyclonedx-py.sbom-3.12.json  pipdeptree.sbom-3.11.dot  pipdeptree.sbom-3.11.mermaid  pipdeptree.sbom-3.12.dot  pipdeptree.sbom-3.12.mermaid
10.2/: .env  .env.template  Dockerfile  README.md  docker-compose.master.runner.yaml  docker-compose.master.services.yaml  docker-compose.master.setup.yaml  docker-compose.master.yaml  docker-compose.networks.yaml  docker-compose.slave.yaml  docker-compose.yaml  graph.mermaid  repository_entrypoint.sh
10.2/DeadlineRepository/: Dockerfile  entry_point_install_rcs.sh  entry_point_install_webservice.sh  entry_point_rcs_runner.sh  entry_point_repository.sh  entry_point_webservice_runner.sh
10.2/DeadlineRepository/dagster_shared/: workspace.yaml
10.2/base_images/: docker-build.sh
10.2/base_images/base_image/: Dockerfile
10.2/base_images/repo_base/: Dockerfile  docker-build.sh
10.2/configs/Deadline10/: deadline.config  deadline.ini  deadline_client.ini
10.2/configs/likec4/entrypoint/: setup.sh
10.2/databases/filebrowser/: filebrowser.db
10.2/docker-third-party/: docker-compose.kitsu.yaml
10.2/docker-third-party/ayon/: docker-compose.override.yml
10.2/docker-third-party/cgwire/: Dockerfile  docker-compose.kitsu.yaml
10.2/docker-third-party/likec4/: run.sh  setup.sh
10.2/docker-third-party/postgres/: postgresql.conf
10.2/filebrowser/: filebrowser.json
10.2/mermaid/: ayon-docker.mermaid  deadline-docker.mermaid  kitus-docker.mermaid
10.2/mongodb/: config.conf
10.4/: docker-compose.yaml
10.4/mongodb/: config.conf
10_2/: README.md
configs/dagster/config/: workspace.yaml
configs/filebrowser/db/: filebrowser.db
configs/mongodb/: docker-entrypoint.py
configs/mongodb/4_4/: docker-entrypoint.py
dagster/: workspace.yaml
docker/: Dockerfile  dagster.yaml  docker-compose.yml  ubuntu_2204__script_install_docker.sh
docker/bitnami/harbor/: docker-compose.yml
docs/: README.md  conf.py  graphviz_example_pipdeptree.docs.dot  index.rst  readme_rst.rst
docs/dot/: graphviz_pipdeptree.docs.dot
install/: install_ubuntu_2004-2.sh  install_ubuntu_2004.sh  install_ubuntu_2204.py  install_ubuntu_2204.sh
installer/ubuntu/22.04/: install_ubuntu_2204.py
media/Blender/: video_template.blend
media/Blender/2025-04-19/: 2025-04-19_teaser.blend  hello_openstudiolandscapes.blend
media/Blender/2025-06-21_issue-01_openstudiolandscapes_installation/: issue-01_openstudiolandscapes_installation__cut.blend  issue-01_openstudiolandscapes_installation__prep.blend
media/Blender/2025-06-21_issue-02_openstudiolandscapes_101/: issue-02_openstudiolandscapes_101__cut.blend  issue-02_openstudiolandscapes_101__prep.blend
media/OBS/SceneCollections/: SceneCollection_OpenStudioLandscapes.json
obsidian/Dailies/: 2025-03-13.md
obsidian/Excalidraw/Drawings/: Overview.md
src/Deadline/deadline_docker/: __init__.py  assets.py  assets_10_2.py  constants.py  definitions.py  skeleton.py
src/Deadline/open_studio_landscapes/: assets.py  assets_10_2.py  assets_visualizer.py  definitions.py
src/Deadline/studio_landscapes/: assets.py  assets_10_2.py  assets_git_repositories.py  assets_visualizer.py  constants.py  definitions.py
src/OpenStudioLandscapes/engine/: .hosts  __init__.py  constants.py  definitions.py  enums.py  features.py
src/OpenStudioLandscapes/open_studio_landscapes/: __init__.py  assets.py  constants.py  definitions.py  merge_compose.py  skeleton.py
src/__SECRET__/: __init__.py  secrets.py
src/code_locations/: README.md
src/code_locations/Ayon/: README.md  pyproject.toml  setup.cfg  setup.py
src/code_locations/Kitsu/: README.md  pyproject.toml  setup.cfg  setup.py
src/code_locations/LikeC4/: README.md  pyproject.toml  setup.cfg  setup.py
src/code_locations/LikeC4/LikeC4/: definitions.py  jobs.py  sensors.py
src/code_locations/OpenStudioLandscapes-Ayon/: README.md  pyproject.toml  setup.cfg  setup.py
src/code_locations/OpenStudioLandscapes-Grafana/: README.md  pyproject.toml  setup.cfg  setup.py
src/code_locations/OpenStudioLandscapes-Grafana/OpenStudioLandscapes_Grafana/: assets.py  definitions.py
src/code_locations/OpenStudioLandscapes-Kitsu/: README.md  pyproject.toml  setup.cfg  setup.py
src/code_locations/OpenStudioLandscapes-Kitsu/OpenStudioLandscapes_Kitsu/: assets.py  definitions.py
src/code_locations/OpenStudioLandscapes-LikeC4/: README.md  pyproject.toml  setup.cfg  setup.py
src/code_locations/OpenStudioLandscapes-LikeC4/OpenStudioLandscapes_LikeC4/: assets.py  definitions.py
tests/: conftest.py  test_skeleton.py
wiki/: README.md  _toc.md  about_the_author.md  build_docker_image.md  community.md  dagster.md  disclaimer.md  jump_start_kitsu.md  limitations.md  nox.md  overview.md  quickstart.md  requirements.md  roadmap_todo.md  sphinx.md  structure.md  terminology.md
wiki/guides/: blender.md  create_landscape.md  docker.md  github_ssh.md  hardlinks_across_repos.md  nox.md  obs_studio.md  pre_commit.md
wiki/installation/: basic_installation.md  basic_installation_from_script.md  install_features.md  installation_methods.md  installation_paths.md  overview.md
wiki/reference/: README_.md
wiki/run/: run_docker.md  run_harbor.md
wiki/run_openstudiolandscapes/: from_docker_image.md  from_manual.md  from_script.md
(+137 files in other folders)
