[project]
name = "OpenStudioLandscapes_Grafana"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster",
    "dagster-cloud",
    "PyYAML",
    # OpenStudioLandscapes.open_studio_landscapes.base
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "OpenStudioLandscapes_Grafana.definitions"
code_location_name = "OpenStudioLandscapes_Grafana"

[tool.setuptools.packages.find]
exclude=["OpenStudioLandscapes_Grafana_tests"]
