[project]
name = "OpenStudioLandscapes_LikeC4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster",
    "dagster-cloud",
    "PyYAML",
    "python-on-whales",
    # OpenStudioLandscapes.open_studio_landscapes.base
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "OpenStudioLandscapes_LikeC4.definitions"
code_location_name = "OpenStudioLandscapes_LikeC4"

[tool.setuptools.packages.find]
exclude=["OpenStudioLandscapes_LikeC4_tests"]
